# usaco-silver-prep

./: CMakeLists.txt  README.md
src/chapter1/: BinarySearch.java  SelectionSort.java
src/chapter1/resources/: searchIn.txt  sortOut.txt
src/day10_DepthFirstSearch/: Q1_TheLeisurelyStroll.java  Q2_Moocast.java  Q3_SnowBoots.java  Q4_MooTube.java
src/day11_StringProcessing_DataStructures/: Q3_LookUp.java  Q4_PaintingTheFence.java  Q5_RegistersInTheShop.java
src/day12_BreadthFirstSearch/: Q1_HorseshoesII.java  Q2_BronzeLilypadPond.java  Q3_Munching.java  Q4_CornMaze.java
src/day14_CompleteSearch_HardImplementations/: Q4_3DSpaceExploration.java
src/day15_Final/: Q1_CowCounting.java  Q2_GoldilocksAndTheNCows.java  Q3_EscapingTheFarm.java
src/day1_IntroductorySilverProblems/: Q1_ClaustrophobicCows.java  Q3_BarnEchoes.java  Q6_CombinationLock.java
src/day2_SearchingAndSorting/: Q1_ThePerfectCow.java  Q7_CitiesAndStates.java
src/day3_SearchingAndSorting/: Q1_GoodGrass.java  Q2_Lifeguards.java  Q3_CountingHaybales.java  Q4_HoofPaperScissors.java  Q5_WhyDidTheCowCrossTheRoadII.java  Q6_BreedCounting.java  Q8_DiamondCollector.java
src/day4_GreedyMethods/: Q1_HayBales.java  Q6_MountainWatching.java
src/day5_AdhocAndSimulation/: Q2_DiningCows.java  Q5_BovineFireDrill.java
src/day6_Recursion/: Q1_Factorial.java  Q3_Ruler.java  Q5_Sets_NDigitPermutations.java  Q7_Sets_Subsets.java  Q8_QuickSort.java
src/day7_Recursion/: Q1_NeedForSpeed.java  Q2_TheEatingPuzzle.java  Q6_Coggle.java
src/day8_DepthFirstSearch/: Q2_MazeSolver.java  Q7_Checkers.java
src/day9_DepthFirstSearch/: Q1_SatellitePhotographs.java  Q2_FeedingTime.java  Q4_BuildGates.java
src/placement/: Q1.java
src/summer/day11_StringProcessing_DataStructures/: Q1_RobotWorld.java  Q2_CalfFlac.java  Q4_CowPhrasebook.java
src/summer/day13_BreadthFirstSearch/: Q1_SatellitePhotographsII.java  Q2_FeedingTimeII.java  Q4_Laserphones.java
src/summer/day14_CompleteSearch_HardImplementations/: Q3_TheBaleTowerII.java  Q4_TheWaterBowlsII.java
src/summer/day1_IntroductorySilverProblems/: Q2_ParksideTriangle.java  Q4_SeriousCowTag.java  Q5_EenieMeenieMineyMoe.java  Q7_SkiCourseDesign.java
src/summer/day1_PlacementExam/: Q3.java
src/summer/day2_SearchingAndSorting/: Q2_CostumeParty.java  Q3_ElectionTime.java  Q4_Bookshelf.java  Q5_NeedForSpeed.java  Q6_MooSick.java
src/summer/day3_SearchingAndSorting/: Q7_FieldReduction.java
src/summer/day4_GreedyMethods/: Q3_HaybaleStacking.java  Q4_LongDistanceRacing.java  Q5_Gifts.java
src/summer/day5_AdhocAndSimulation/: Q1_LakeMaking.java  Q6_MeetAndGreet.java  Q8_Perimeter.java
src/summer/day6_Recursion/: Q9_MergeSort.java
src/summer/day7_Recursion/: Q8_BaleShare.java
src/summer/day8_DepthFirstSearch/: Q3_Horseshoes.java
src/summer/day9_DepthFirstSearch/: Q3_SwitchingOnTheLights.java
summer/day11_StringProcessing_DataStructures/: Q1_CowCotillion.java  Q2_CleaningTheDishes.java  Q3_FarmerJohnHasNoLargeBrownCow.java
summer/day13_BreadthFirstSearch/: Q3_BuildGatesII.java  Q5_CowBeautyPagentII.java
summer/day14_CompleteSearch_HardImplementations/: Q1_NeedForSpeedII.java  Q2_TheEatingPuzzleII.java
summer/day15_FinalExam/: Q4_TheChivalrousCow.java
summer/day1_PlacementExam/: Q2.java
summer/day3_SearchingAndSorting/: Q9_SubsequencesSummingToSevens.java
summer/day4_GreedyMethods/: Q2_HighCardWins.java  Q7_ThreeLines.java
summer/day5_AdhocAndSimulation/: Q3_BrokenNecklace.java  Q4_AwkwardDigits.java  Q7_RelayRace.java
summer/day6_Recursion/: Q2_Fibonacci.java  Q4_Sets_AllNDigitNumbers.java  Q6_Sets_NDigitCombinations.java
summer/day7_Recursion/: Q3_Moo.java  Q4_BalancedTeams.java  Q5_HealthyHolsteins.java  Q7_TheWaterBowls.java
summer/day8_DepthFirstSearch/: Q1_CowPinball.java  Q4_Hopscotch.java  Q5_GrazingPatterns.java  Q6_CowHopscotch.java
