cmake_minimum_required(VERSION 3.12)
project(AlphaStar_Silver)

set(CMAKE_CXX_STANDARD 14)

add_executable(AlphaStar_Silver
        .idea/dictionaries/WillJ.xml
        .idea/inspectionProfiles/Project_Default.xml
        .idea/misc.xml
        .idea/modules.xml
        .idea/uiDesigner.xml
        .idea/vcs.xml
        .idea/workspace.xml
        out/production/AlphaStar/chapter1/resources/searchIn.txt
        out/production/AlphaStar/chapter1/resources/searchOut.txt
        out/production/AlphaStar/chapter1/resources/sortIn.txt
        out/production/AlphaStar/chapter1/resources/sortOut.txt
        out/production/AlphaStar/chapter1/BinarySearch.class
        out/production/AlphaStar/chapter1/SelectionSort.class
        out/production/AlphaStar/day10_DepthFirstSearch/Q1_TheLeisurelyStroll.class
        out/production/AlphaStar/day10_DepthFirstSearch/Q2_Moocast\$Coord.class
        out/production/AlphaStar/day10_DepthFirstSearch/Q2_Moocast.class
        out/production/AlphaStar/day10_DepthFirstSearch/Q3_SnowBoots.class
        out/production/AlphaStar/day10_DepthFirstSearch/Q4_MooTube.class
        out/production/AlphaStar/day11_StringProcessing_DataStructures/Q1_CowCotillion.class
        out/production/AlphaStar/day11_StringProcessing_DataStructures/Q1_RobotWorld.class
        out/production/AlphaStar/day11_StringProcessing_DataStructures/Q2_CalfFlac.class
        out/production/AlphaStar/day11_StringProcessing_DataStructures/Q2_CleaningTheDishes.class
        out/production/AlphaStar/day11_StringProcessing_DataStructures/Q3_FarmerJohnHasNoLargeBrownCow.class
        out/production/AlphaStar/day11_StringProcessing_DataStructures/Q3_LookUp.class
        out/production/AlphaStar/day11_StringProcessing_DataStructures/Q4_CowPhrasebook.class
        out/production/AlphaStar/day11_StringProcessing_DataStructures/Q4_PaintingTheFence\$ChangePoint.class
        out/production/AlphaStar/day11_StringProcessing_DataStructures/Q4_PaintingTheFence.class
        out/production/AlphaStar/day11_StringProcessing_DataStructures/Q5_RegistersInTheShop.class
        out/production/AlphaStar/day12_BreadthFirstSearch/Q1_HorseshoesII.class
        out/production/AlphaStar/day12_BreadthFirstSearch/Q2_BronzeLilypadPond.class
        out/production/AlphaStar/day12_BreadthFirstSearch/Q3_Munching.class
        out/production/AlphaStar/day12_BreadthFirstSearch/Q4_CornMaze\$Coord.class
        out/production/AlphaStar/day12_BreadthFirstSearch/Q4_CornMaze.class
        out/production/AlphaStar/day13_BreadthFirstSearch/Q1_SatellitePhotographsII.class
        out/production/AlphaStar/day13_BreadthFirstSearch/Q2_FeedingTimeII.class
        out/production/AlphaStar/day13_BreadthFirstSearch/Q3_BuildGatesII.class
        out/production/AlphaStar/day13_BreadthFirstSearch/Q4_Laserphones\$Coord.class
        out/production/AlphaStar/day13_BreadthFirstSearch/Q4_Laserphones.class
        out/production/AlphaStar/day13_BreadthFirstSearch/Q5_CowBeautyPagentII.class
        out/production/AlphaStar/day14_CompleteSearch_HardImplementations/Q1_NeedForSpeedII.class
        out/production/AlphaStar/day14_CompleteSearch_HardImplementations/Q2_TheEatingPuzzleII.class
        out/production/AlphaStar/day14_CompleteSearch_HardImplementations/Q3_TheBaleTowerII.class
        out/production/AlphaStar/day14_CompleteSearch_HardImplementations/Q4_3DSpaceExploration\$Coord.class
        out/production/AlphaStar/day14_CompleteSearch_HardImplementations/Q4_3DSpaceExploration.class
        out/production/AlphaStar/day14_CompleteSearch_HardImplementations/Q4_TheWaterBowlsII.class
        out/production/AlphaStar/day15_Final/Q1_CowCounting.class
        out/production/AlphaStar/day15_Final/Q2_GoldilocksAndTheNCows\$ChangePoint.class
        out/production/AlphaStar/day15_Final/Q2_GoldilocksAndTheNCows.class
        out/production/AlphaStar/day15_Final/Q3_EscapingTheFarm.class
        out/production/AlphaStar/day15_Final/Q4_TheChivalrousCow\$Coord.class
        out/production/AlphaStar/day15_Final/Q4_TheChivalrousCow.class
        out/production/AlphaStar/day1_IntroductorySilverProblems/Q1_ClaustrophobicCows.class
        out/production/AlphaStar/day1_IntroductorySilverProblems/Q2_ParksideTriangle.class
        out/production/AlphaStar/day1_IntroductorySilverProblems/Q3_BarnEchoes.class
        out/production/AlphaStar/day1_IntroductorySilverProblems/Q4_SeriousCowTag.class
        out/production/AlphaStar/day1_IntroductorySilverProblems/Q5_EenieMeenieMineyMoe.class
        out/production/AlphaStar/day1_IntroductorySilverProblems/Q6_CombinationLock.class
        out/production/AlphaStar/day1_IntroductorySilverProblems/Q7_SkiCourseDesign.class
        out/production/AlphaStar/day2_SearchingAndSorting/Q1_ThePerfectCow.class
        out/production/AlphaStar/day2_SearchingAndSorting/Q2_CostumeParty.class
        out/production/AlphaStar/day2_SearchingAndSorting/Q3_ElectionTime.class
        out/production/AlphaStar/day2_SearchingAndSorting/Q4_Bookshelf.class
        out/production/AlphaStar/day2_SearchingAndSorting/Q5_NeedForSpeed\$CarInfo.class
        out/production/AlphaStar/day2_SearchingAndSorting/Q5_NeedForSpeed\$partInfo.class
        out/production/AlphaStar/day2_SearchingAndSorting/Q5_NeedForSpeed.class
        out/production/AlphaStar/day2_SearchingAndSorting/Q6_MooSick.class
        out/production/AlphaStar/day2_SearchingAndSorting/Q7_CitiesAndStates.class
        out/production/AlphaStar/day3_SearchingAndSorting/Q1_GoodGrass.class
        out/production/AlphaStar/day3_SearchingAndSorting/Q2_Lifeguards\$ChangePoints.class
        out/production/AlphaStar/day3_SearchingAndSorting/Q2_Lifeguards.class
        out/production/AlphaStar/day3_SearchingAndSorting/Q3_CountingHaybales.class
        out/production/AlphaStar/day3_SearchingAndSorting/Q4_HoofPaperScissors.class
        out/production/AlphaStar/day3_SearchingAndSorting/Q5_WhyDidTheCowCrossTheRoadII.class
        out/production/AlphaStar/day3_SearchingAndSorting/Q6_BreedCounting.class
        out/production/AlphaStar/day3_SearchingAndSorting/Q7_FieldReduction\$CompX.class
        out/production/AlphaStar/day3_SearchingAndSorting/Q7_FieldReduction\$CompY.class
        out/production/AlphaStar/day3_SearchingAndSorting/Q7_FieldReduction\$Coord.class
        out/production/AlphaStar/day3_SearchingAndSorting/Q7_FieldReduction.class
        out/production/AlphaStar/day3_SearchingAndSorting/Q8_DiamondCollector.class
        out/production/AlphaStar/day3_SearchingAndSorting/Q9_SubsequencesSummingToSevens.class
        out/production/AlphaStar/day4_GreedyMethods/Q1_HayBales.class
        out/production/AlphaStar/day4_GreedyMethods/Q2_HighCardWins.class
        out/production/AlphaStar/day4_GreedyMethods/Q3_HaybaleStacking.class
        out/production/AlphaStar/day4_GreedyMethods/Q4_LongDistanceRacing.class
        out/production/AlphaStar/day4_GreedyMethods/Q5_Gifts\$Gift.class
        out/production/AlphaStar/day4_GreedyMethods/Q5_Gifts.class
        out/production/AlphaStar/day4_GreedyMethods/Q6_MountainWatching.class
        out/production/AlphaStar/day4_GreedyMethods/Q7_ThreeLines\$Coord.class
        out/production/AlphaStar/day4_GreedyMethods/Q7_ThreeLines.class
        out/production/AlphaStar/day5_AdhocAndSimulation/Q1_LakeMaking.class
        out/production/AlphaStar/day5_AdhocAndSimulation/Q2_DiningCows.class
        out/production/AlphaStar/day5_AdhocAndSimulation/Q3_BrokenNecklace.class
        out/production/AlphaStar/day5_AdhocAndSimulation/Q4_AwkwardDigits.class
        out/production/AlphaStar/day5_AdhocAndSimulation/Q5_BovineFireDrill.class
        out/production/AlphaStar/day5_AdhocAndSimulation/Q6_MeetAndGreet.class
        out/production/AlphaStar/day5_AdhocAndSimulation/Q7_RelayRace\$CowInfo.class
        out/production/AlphaStar/day5_AdhocAndSimulation/Q7_RelayRace.class
        out/production/AlphaStar/day5_AdhocAndSimulation/Q8_Perimeter.class
        out/production/AlphaStar/day6_Recursion/Q1_Factorial.class
        out/production/AlphaStar/day6_Recursion/Q2_Fibonacci.class
        out/production/AlphaStar/day6_Recursion/Q3_Ruler.class
        out/production/AlphaStar/day6_Recursion/Q4_Sets_AllNDigitNumbers.class
        out/production/AlphaStar/day6_Recursion/Q5_Sets_NDigitPermutations.class
        out/production/AlphaStar/day6_Recursion/Q6_Sets_NDigitCombinations.class
        out/production/AlphaStar/day6_Recursion/Q7_Sets_Subsets.class
        out/production/AlphaStar/day6_Recursion/Q8_QuickSort.class
        out/production/AlphaStar/day6_Recursion/Q9_MergeSort.class
        out/production/AlphaStar/day7_Recursion/Q1_NeedForSpeed\$CarInfo.class
        out/production/AlphaStar/day7_Recursion/Q1_NeedForSpeed\$partInfo.class
        out/production/AlphaStar/day7_Recursion/Q1_NeedForSpeed.class
        out/production/AlphaStar/day7_Recursion/Q2_TheEatingPuzzle.class
        out/production/AlphaStar/day7_Recursion/Q3_Moo.class
        out/production/AlphaStar/day7_Recursion/Q4_BalancedTeams.class
        out/production/AlphaStar/day7_Recursion/Q5_HealthyHolsteins.class
        out/production/AlphaStar/day7_Recursion/Q6_Coggle.class
        out/production/AlphaStar/day7_Recursion/Q7_TheWaterBowls.class
        out/production/AlphaStar/day7_Recursion/Q8_BaleShare.class
        out/production/AlphaStar/day8_DepthFirstSearch/Q1_CowPinball.class
        out/production/AlphaStar/day8_DepthFirstSearch/Q2_MazeSolver.class
        out/production/AlphaStar/day8_DepthFirstSearch/Q3_Horseshoes.class
        out/production/AlphaStar/day8_DepthFirstSearch/Q4_Hopscotch.class
        out/production/AlphaStar/day8_DepthFirstSearch/Q5_GrazingPatterns.class
        out/production/AlphaStar/day8_DepthFirstSearch/Q6_CowHopscotch.class
        out/production/AlphaStar/day8_DepthFirstSearch/Q7_Checkers\$Coord.class
        out/production/AlphaStar/day8_DepthFirstSearch/Q7_Checkers.class
        out/production/AlphaStar/day9_DepthFirstSearch/Q1_SatellitePhotographs.class
        out/production/AlphaStar/day9_DepthFirstSearch/Q2_FeedingTime.class
        out/production/AlphaStar/day9_DepthFirstSearch/Q3_SwitchingOnTheLights\$Coord.class
        out/production/AlphaStar/day9_DepthFirstSearch/Q3_SwitchingOnTheLights.class
        out/production/AlphaStar/day9_DepthFirstSearch/Q4_BuildGates\$Coord.class
        out/production/AlphaStar/day9_DepthFirstSearch/Q4_BuildGates\$Pasture.class
        out/production/AlphaStar/day9_DepthFirstSearch/Q4_BuildGates.class
        out/production/AlphaStar/placement/Q1.class
        out/production/AlphaStar/placement/Q2.class
        out/production/AlphaStar/placement/Q3.class
        src/chapter1/resources/searchIn.txt
        src/chapter1/resources/searchOut.txt
        src/chapter1/resources/sortIn.txt
        src/chapter1/resources/sortOut.txt
        src/chapter1/BinarySearch.java
        src/chapter1/SelectionSort.java
        src/day10_DepthFirstSearch/Q1_TheLeisurelyStroll.java
        src/day10_DepthFirstSearch/Q2_Moocast.java
        src/day10_DepthFirstSearch/Q3_SnowBoots.java
        src/day10_DepthFirstSearch/Q4_MooTube.java
        src/day11_StringProcessing_DataStructures/Q1_CowCotillion.java
        src/day11_StringProcessing_DataStructures/Q1_RobotWorld.java
        src/day11_StringProcessing_DataStructures/Q2_CalfFlac.java
        src/day11_StringProcessing_DataStructures/Q2_CleaningTheDishes.java
        src/day11_StringProcessing_DataStructures/Q3_FarmerJohnHasNoLargeBrownCow.java
        src/day11_StringProcessing_DataStructures/Q3_LookUp.java
        src/day11_StringProcessing_DataStructures/Q4_CowPhrasebook.java
        src/day11_StringProcessing_DataStructures/Q4_PaintingTheFence.java
        src/day11_StringProcessing_DataStructures/Q5_RegistersInTheShop.java
        src/day12_BreadthFirstSearch/Q1_HorseshoesII.java
        src/day12_BreadthFirstSearch/Q2_BronzeLilypadPond.java
        src/day12_BreadthFirstSearch/Q3_Munching.java
        src/day12_BreadthFirstSearch/Q4_CornMaze.java
        src/day13_BreadthFirstSearch/Q1_SatellitePhotographsII.java
        src/day13_BreadthFirstSearch/Q2_FeedingTimeII.java
        src/day13_BreadthFirstSearch/Q3_BuildGatesII.java
        src/day13_BreadthFirstSearch/Q4_Laserphones.java
        src/day13_BreadthFirstSearch/Q5_CowBeautyPagentII.java
        src/day14_CompleteSearch_HardImplementations/Q1_NeedForSpeedII.java
        src/day14_CompleteSearch_HardImplementations/Q2_TheEatingPuzzleII.java
        src/day14_CompleteSearch_HardImplementations/Q3_TheBaleTowerII.java
        src/day14_CompleteSearch_HardImplementations/Q4_3DSpaceExploration.java
        src/day14_CompleteSearch_HardImplementations/Q4_TheWaterBowlsII.java
        src/day15_Final/Q1_CowCounting.java
        src/day15_Final/Q2_GoldilocksAndTheNCows.java
        src/day15_Final/Q3_EscapingTheFarm.java
        src/day15_Final/Q4_TheChivalrousCow.java
        src/day1_IntroductorySilverProblems/Q1_ClaustrophobicCows.java
        src/day1_IntroductorySilverProblems/Q2_ParksideTriangle.java
        src/day1_IntroductorySilverProblems/Q3_BarnEchoes.java
        src/day1_IntroductorySilverProblems/Q4_SeriousCowTag.java
        src/day1_IntroductorySilverProblems/Q5_EenieMeenieMineyMoe.java
        src/day1_IntroductorySilverProblems/Q6_CombinationLock.java
        src/day1_IntroductorySilverProblems/Q7_SkiCourseDesign.java
        src/day2_SearchingAndSorting/Q1_ThePerfectCow.java
        src/day2_SearchingAndSorting/Q2_CostumeParty.java
        src/day2_SearchingAndSorting/Q3_ElectionTime.java
        src/day2_SearchingAndSorting/Q4_Bookshelf.java
        src/day2_SearchingAndSorting/Q5_NeedForSpeed.java
        src/day2_SearchingAndSorting/Q6_MooSick.java
        src/day2_SearchingAndSorting/Q7_CitiesAndStates.java
        src/day3_SearchingAndSorting/Q1_GoodGrass.java
        src/day3_SearchingAndSorting/Q2_Lifeguards.java
        src/day3_SearchingAndSorting/Q3_CountingHaybales.java
        src/day3_SearchingAndSorting/Q4_HoofPaperScissors.java
        src/day3_SearchingAndSorting/Q5_WhyDidTheCowCrossTheRoadII.java
        src/day3_SearchingAndSorting/Q6_BreedCounting.java
        src/day3_SearchingAndSorting/Q7_FieldReduction.java
        src/day3_SearchingAndSorting/Q8_DiamondCollector.java
        src/day3_SearchingAndSorting/Q9_SubsequencesSummingToSevens.java
        src/day4_GreedyMethods/Q1_HayBales.java
        src/day4_GreedyMethods/Q2_HighCardWins.java
        src/day4_GreedyMethods/Q3_HaybaleStacking.java
        src/day4_GreedyMethods/Q4_LongDistanceRacing.java
        src/day4_GreedyMethods/Q5_Gifts.java
        src/day4_GreedyMethods/Q6_MountainWatching.java
        src/day4_GreedyMethods/Q7_ThreeLines.java
        src/day5_AdhocAndSimulation/Q1_LakeMaking.java
        src/day5_AdhocAndSimulation/Q2_DiningCows.java
        src/day5_AdhocAndSimulation/Q3_BrokenNecklace.java
        src/day5_AdhocAndSimulation/Q4_AwkwardDigits.java
        src/day5_AdhocAndSimulation/Q5_BovineFireDrill.java
        src/day5_AdhocAndSimulation/Q6_MeetAndGreet.java
        src/day5_AdhocAndSimulation/Q7_RelayRace.java
        src/day5_AdhocAndSimulation/Q8_Perimeter.java
        src/day6_Recursion/Q1_Factorial.java
        src/day6_Recursion/Q2_Fibonacci.java
        src/day6_Recursion/Q3_Ruler.java
        src/day6_Recursion/Q4_Sets_AllNDigitNumbers.java
        src/day6_Recursion/Q5_Sets_NDigitPermutations.java
        src/day6_Recursion/Q6_Sets_NDigitCombinations.java
        src/day6_Recursion/Q7_Sets_Subsets.java
        src/day6_Recursion/Q8_QuickSort.java
        src/day6_Recursion/Q9_MergeSort.java
        src/day7_Recursion/Q1_NeedForSpeed.java
        src/day7_Recursion/Q2_TheEatingPuzzle.java
        src/day7_Recursion/Q3_Moo.java
        src/day7_Recursion/Q4_BalancedTeams.java
        src/day7_Recursion/Q5_HealthyHolsteins.java
        src/day7_Recursion/Q6_Coggle.java
        src/day7_Recursion/Q7_TheWaterBowls.java
        src/day7_Recursion/Q8_BaleShare.java
        src/day8_DepthFirstSearch/Q1_CowPinball.java
        src/day8_DepthFirstSearch/Q2_MazeSolver.java
        src/day8_DepthFirstSearch/Q3_Horseshoes.java
        src/day8_DepthFirstSearch/Q4_Hopscotch.java
        src/day8_DepthFirstSearch/Q5_GrazingPatterns.java
        src/day8_DepthFirstSearch/Q6_CowHopscotch.java
        src/day8_DepthFirstSearch/Q7_Checkers.java
        src/day9_DepthFirstSearch/Q1_SatellitePhotographs.java
        src/day9_DepthFirstSearch/Q2_FeedingTime.java
        src/day9_DepthFirstSearch/Q3_SwitchingOnTheLights.java
        src/day9_DepthFirstSearch/Q4_BuildGates.java
        src/placement/Q1.java
        src/placement/Q2.java
        src/placement/Q3.java
        AlphaStar.iml)
